--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <!-- font awesome code -->
     <script src="https://kit.fontawesome.com/65a033541f.js" crossorigin="anonymous"></script>
     <title>World Cup</title>
@@ -17,9 +19,11 @@
     <header>
         <div class="container">
             <div class="header-part header-content">
-                <h1>The Greatest <br> Show on the <br> Earth</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                <h1>The Greatest Show on the Earth</h1>
+                <p class="laptop-view">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+                    in a piece of
                     classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p class="tablet-mobile-view">Contrary to popular belief, Lorem Ipsum is not simply random text...</p>
                 <button class="top-button">Watch Live<i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="header-part header-img">
@@ -31,23 +35,23 @@
     <!-- main part -->
     <main>
         <section id="main-section">
-            <div class="buttons">
+            <aside class="buttons">
                 <div class="button">
-                    <button class="btn">Upcoming Match</button>
-                    <button class="btn">All Group</button>
-                    <button class="btn checked">Blog</button>
+                    <a class="btn" href="blog.html">Upcoming Match</a>
+                    <a href="#" class="btn">All Group</a>
+                    <a href="index.html" class="btn checked">Blog</a>
                 </div>
-            </div>
+            </aside>
             <article class="blogs">
                 <div class="blog">
                     <img src="images/Blog Image.png" alt="Blog-Image">
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -57,10 +61,10 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -70,10 +74,10 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -83,10 +87,10 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -96,10 +100,10 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -109,10 +113,10 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -122,10 +126,10 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -135,10 +139,10 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
@@ -148,16 +152,48 @@
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
                         over Kimpenbe transfer</p>
-                    <p>
-                        <i class="fa-light fa-clock-eight"></i>
+                    <p class="blog-icons">
+                        <img class="icons" src="images/Time Icon.png" alt="time-icon">
                         <span>10h</span>
-                        <i class="fa-light fa-message-captions"></i>
+                        <img class="icons" src="images/Chat Icon.png" alt="chat-icon">
                         <span>23</span>
                     </p>
                 </div>
             </article>
+
         </section>
+        <div class="tablet-btn">
+            <button class="tablet-view">View All</button>
+        </div>
+
+
     </main>
+    <!-- footer section  -->
+    <footer>
+        <div class="goal-title">
+            <h2>Goal</h2>
+        </div>
+        <hr>
+        <div class="footer-menus">
+            <p class="footer-menu">Contact Us</p>
+            <p class="footer-menu">Terms of Service</p>
+            <p class="footer-menu">Privacy Policy</p>
+            <p class="footer-menu">Privacy Settings</p>
+            <p class="footer-menu">Goal App</p>
+            <p class="footer-menu">Goal Live</p>
+        </div>
+        <div class="footer-icons">
+            <a href="facebook.com" class="footer-icon">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="youtube.com" class="footer-icon">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="instagram.com" class="footer-icon">
+                <i class="fa-brands fa-instagram-square"></i>
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
