--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <!-- font awesome code -->
     <script src="https://kit.fontawesome.com/65a033541f.js" crossorigin="anonymous"></script>
+    <!-- favicon  -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>World Cup</title>
 </head>
 
@@ -17,7 +19,8 @@
     <header>
         <div class="container">
             <div class="header-part header-content">
-                <h1>The Greatest Show on the Earth</h1>
+                <h1>The <span class="other-color">Greatest</span> Show on the <span class="other-color"> Earth</span>
+                </h1>
                 <p class="laptop-view">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
                     in a piece of
                     classical Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -35,7 +38,7 @@
         <section id="main-section">
             <aside class="buttons">
                 <div class="button">
-                    <a class="btn checked" href="blog.html">Upcoming Match</a>
+                    <a class="btn checked" href="upcoming-match.html">Upcoming Match</a>
                     <a href="#" class="btn">All Group</a>
                     <a href="index.html" class="btn">Blog</a>
                 </div>
