--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
         </div>
     </header>
 
-    <!-- main part -->
+    <!-----
+    main part 
+    ------>
     <main>
+
         <section id="main-section">
+            <!-- button section -->
             <aside class="buttons">
                 <div class="button">
                     <a class="btn" href="upcoming-match.html">Upcoming Match</a>
@@ -45,6 +49,7 @@
                     <a href="index.html" class="btn checked">Blog</a>
                 </div>
             </aside>
+            <!-- blog section -->
             <article class="blogs">
                 <div class="blog">
                     <img src="images/Blog Image.png" alt="Blog-Image">
