--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -33,9 +33,12 @@
         </div>
     </header>
 
-    <!-- main part -->
+    <!------
+    main part 
+    ------->
     <main>
         <section id="main-section">
+            <!-- button section -->
             <aside class="buttons">
                 <div class="button">
                     <a class="btn checked" href="upcoming-match.html">Upcoming Match</a>
@@ -45,8 +48,7 @@
             </aside>
             <article class="blogs">
 
-
-
+                <!-- games section -->
                 <div class="games">
                     <div class="image-section">
                         <img src="images/germany Flag.png" alt="Germany-flag">
