--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -174,13 +174,13 @@
             <p class="footer-menu">Goal Live</p>
         </div>
         <div class="footer-icons">
-            <a href="facebook.com" class="footer-icon">
+            <a href="https://www.facebook.com/" class="footer-icon">
                 <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="youtube.com" class="footer-icon">
+            <a href="https://www.youtube.com/" class="footer-icon">
                 <i class="fa-brands fa-youtube"></i>
             </a>
-            <a href="instagram.com" class="footer-icon">
+            <a href="https://www.instagram.com/" class="footer-icon">
                 <i class="fa-brands fa-instagram-square"></i>
             </a>
         </div>
