done and all done

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </p>
                 </div>
 
-                <div class="blog">
+                <div class="blog hidden">
                     <img src="images/Blog Image.png" alt="Blog-Image">
                     <button class="btn-main">Transfer</button>
                     <p class="blog-details">Transfer Live: Chlesea in talks <br>
