--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -137,7 +137,7 @@
 
                 </div>
 
-                <div class="games">
+                <div class="games hidden">
                     <div class="image-section">
                         <img src="images/germany Flag.png" alt="Germany-flag">
                         <p>VS</p>
