--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -21,10 +21,9 @@
             <div class="header-part header-content">
                 <h1>The <span class="other-color">Greatest</span> Show on the <span class="other-color"> Earth</span>
                 </h1>
-                <p class="laptop-view">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
-                    in a piece of
-                    classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <p class="tablet-mobile-view">Contrary to popular belief, Lorem Ipsum is not simply random text...</p>
+                <p class="laptop-view">This is the biggest show on earth. The full world is the audience of this
+                    marvelous show. This is FIFA world cup</p>
+                <p class="tablet-mobile-view">This is the biggest show on earth. The full world is the...</p>
                 <button class="top-button">Watch Live<i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="header-part header-img">
