more-change-in-header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </h1>
                 <p class="laptop-view">This is the biggest show on earth. The full world is the audience of this
                     marvelous show. This is FIFA world cup</p>
-                <p class="tablet-mobile-view">This is the biggest show on earth. The full world is the...</p>
+                <p class="tablet-mobile-view">This is the biggest show on earth. The full world is the audience of
+                    this...</p>
                 <button class="top-button">Watch Live<i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="header-part header-img">
