--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>The <span class="other-color">Greatest</span> Show on the <span class="other-color"> Earth</span>
                 </h1>
                 <p class="laptop-view">This is the biggest show on earth. The full world is the audience of this
-                    marvelous show. This is FIFA world cup</p>
+                    marvelous show. This is FIFA world cup. All are eagerly wait for the blast. Let's do this...</p>
                 <p class="tablet-mobile-view">This is the biggest show on earth. The full world is the audience of
                     this...</p>
                 <button class="top-button">Watch Live<i class="fa-solid fa-arrow-right"></i></button>
